<resources>
    <string name="app_name">AA</string>
    <string name="server_client_id">890358669546-sir83578662gmakrg589fet8p1qven9n.apps.googleusercontent.com</string>

    <string name="btnSignout">Cerrar Sesión</string>
    <string name="signed_in_fmt">Usuario: %s</string>
    <string name="signed_in_fmt2">Correo: %s</string>
    <string name="signed_out">^_^</string>
    <string name="signed_out2">...</string>
    <string name="loading">Loading</string>
    <string name="facebook_app_id">298807340452053</string>

    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="registro">Registrarse</string>
    <string name="iniciosesion">Iniciar sesión</string>

    <string name="cli_m">Cliente</string>
    <string name="emp_m">Empresa</string>
    <string name="cerr_m">Cerrar S</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
