<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.prieto.william.logeo_gmail_v1.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:background="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical">
        <TextView android:id="@+id/id_tvStatusUser"
            android:text="User"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <TextView android:id="@+id/id_tvStatusEmail"
            android:text="E-mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=" "
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:textAlignment="center"
                    android:id="@+id/etUsuario"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contraseña"
                    android:textAlignment="center"
                    android:password="true"
                    android:id="@+id/etContraseña"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/bSesion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/iniciosesion"
                         android:background="@drawable/com_facebook_tooltip_black_background"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/bSalir"
                        android:text="Cerrar Sesión"
                        android:textColor="@color/white"
                        android:background="@drawable/com_facebook_tooltip_black_background"
                        android:visibility="gone"

                        />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=" "
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=" "
                android:background="#ffffff" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:orientation="horizontal"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=" "
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/id_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    tools:visibility="gone" />

                <Button android:id="@+id/id_sign_out_button"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textSize="14sp"
                    android:text="@string/btnSignout"
                    android:textColor="@color/black"
                    android:background="@drawable/common_google_signin_btn_text_light_pressed"
                    android:textAllCaps="false"
                    android:layout_margin="4dp"
                    android:visibility="gone"
                    tools:visibility="visible"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/bRegistro"
                   android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#f2dd1d"
                    android:text="@string/registro"

                    android:background="#ffffff"
                    android:textStyle="bold"
                    android:singleLine="true" />

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=" "
                />
        </LinearLayout>
    </LinearLayout>





</LinearLayout>
